# bazel-monorepo

./: .gitignore  README.md  WORKSPACE
java/: BUILD.bazel
java/src/main/java/com/example/other/: Baz.java
java/src/main/java/com/example/runner/: Main.java
scala/: BUILD.bazel  sbt-package.bzl
scala/hello-world/: build.sbt
