# load(":sbt-package.bzl", "sbt_package")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_extract")
# sbt_package(
#     name = "scala_jar",
#     jar = "scala_2.12-0.1.0-SNAPSHOT.jar",
#    # script = "//scala:test.sh"
# )

container_image(
    name = "src-container",
    base = "@scala-sbt//image",
    data_path = ".",
    directory = "src",
    files = glob([
        "hello-world/**",
    ]),
)

container_run_and_extract(
    name = "scala_file",
    commands = [
        "sbt clean compile package",
    ],
    docker_run_flags = [
        "-w",
        "/src/hello-world",
    ],
    extract_file = "/src/hello-world/target/scala-2.12/hello-world_2.12-0.1.0-SNAPSHOT.jar",
    image = ":src-container.tar",
)
